--- a/app/views/photos/edit_form.html.erb
+++ b/app/views/photos/edit_form.html.erb
@@ -12,6 +12,6 @@ The Caption
   </label>
   <input type="text" id="caption" name="the_caption" value="<%= @photo.caption %>">
 
-  <button>Edit photo</button>
+  <button>Update Photo</button>
 
 </form>
