--- a/app/views/photos/new_form.html.erb
+++ b/app/views/photos/new_form.html.erb
@@ -12,6 +12,6 @@ The Caption
   </label>
   <input type="text" id="caption" name="the_caption">
 
-  <button>Add a photo</button>
+  <button>Create Photo</button>
 
 </form>
