Fixed delete route to match grade expectations

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -13,7 +13,7 @@
   <div>
     <a href="/photos/<%= photo.id %>">Detail</a>
     <a href="/photos/<%= photo.id %>/edit">Edit</a>
-    <a href="/photos/delete_photo/<%= photo.id %>">Delete</a>
+    <a href="/delete_photo/<%= photo.id %>">Delete</a>
   </div>
 
 </div>
