--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -15,7 +15,7 @@
 <div>
   <a href="/photos/">Back</a>
   <a href="/photos/<%= @photo.id %>/edit">Edit</a>
-  <a href="/photos/delete_photo/<%= @photo.id %>">Delete</a>
+  <a href="/delete_photo/<%= @photo.id %>">Delete</a>
 </div>
 
 </div>
